fix adjust quality of source film